--- a/src/ui/tabbed-pane.html
+++ b/src/ui/tabbed-pane.html
@@ -78,10 +78,13 @@ span.name {
 }
 
 #content {
-	padding:10px;
-	display:flex;
+	padding:3px;
+	display:block;
 	flex:1;
 	background:white;
+	box-sizing: border-box;
+	overflow: hidden;
+	position:relative;
 }
 
 span.close {
