--- a/src/workbench/pgcc-workbench.html
+++ b/src/workbench/pgcc-workbench.html
@@ -7,19 +7,30 @@
 <dom-module id="pgcc-workbench">
 <style>
 
-:host { position:fixed; top:0; bottom:0; left:0; right:0; display:flex; flex-direction:column; align-items: stretch; width:100%; height:100%;}
+:host {
+	-webkit-user-select: none; /* Chrome/Safari */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* IE10+ */
+	-o-user-select: none;
+	user-select: none;
+	position:fixed; top:0; bottom:0; left:0; right:0; display:flex; flex-direction:column; align-items: stretch; width:100%; height:100%;}
 
 table {  position:fixed; top:0; bottom:0; left:0; right:0; padding:0; margin:0; border:0; border-collapse: collapse; width:100%; height:100%; }
 
 menu-bar { visibility:hidden; position:fixed; height:0; width:0;}
 tool-bar {
+	-webkit-user-select: none; /* Chrome/Safari */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* IE10+ */
+	-o-user-select: none;
+	user-select: none;
 	background:#f1f1f1; color:#333333;
 	display:flex; width:100%; padding:3px; align-content: center; align-items: center;
 	border-bottom:1px solid #dddddd;
 	border-top:1px solid #ededed;
 	box-shadow: 0px 0px 2px rgba(0,0,0,0.1);
 }
-tool-bar > item { position:relative; top:0; border-radius:3px; display:flex; background:#f1f1f1; padding:3px; margin:0px 3px; box-sizing:border-box; border:1px solid transparent; cursor:hand; height:40px; align-content:center; align-items: center; justify-content: center;}
+tool-bar > item {position:relative; top:0; border-radius:3px; display:flex; background:#f1f1f1; padding:3px; margin:0px 3px; box-sizing:border-box; border:1px solid transparent; cursor:hand; height:40px; align-content:center; align-items: center; justify-content: center;}
 tool-bar > item:hover { box-shadow:2px 2px 2px #cccccc; border:1px solid #aaaaaa; }
 tool-bar > separator { position:relative; top:0; width:1px; border-left: 1px solid #cacaca; margin:4px; display:inline-block; height:20px; }
 tool-bar img { display:inline-block; height:100%; width:auto;}
@@ -123,7 +134,7 @@ Polymer({
 					menuitem.submenu.append(new gui.MenuItem({type: "separator"}));
 				} else {
 					var	label = $(this).text().replace("_", "").trim();
-					var command = $(this).attr("command");
+					var command = $(this).text().replace("_", "").replace(" ", "").trim();
 					menuitem.submenu.append(new gui.MenuItem({
 						label:label,
 						click:function() { WORKBENCH.command(command); }
@@ -139,7 +150,7 @@ Polymer({
 			var icon = "./resources/icons/" + cmd +".svg";
 			$(this).text("");
 			$(this).html("<img class='pgcc-workbench' src='"+icon+"' alt='"+cmd+"' title='"+cmd+"'>");
-			$(this).click(function(){ Commands[cmd](); });
+			$(this).click(function(){ WORKBENCH.command(cmd); });
 		});
 
 		setTimeout(main, 200);
