--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,10 @@
 	require('nw.gui').Window.get().showDevTools();
 
 	</script>
-	<script src="./lib/d3.min.js"></script>
 	<script src="./lib/jquery.js"></script>
 	<script src="./lib/jquery-ui.js"></script>
 	<script src="./utils/utils.js"></script>
+	<script src="./bower_components/d3.min.js"></script>
 	<link rel="import" href="./bower_components/polymer/polymer.html">
 	<link rel="import" href="./workbench/pgcc-workbench.html">
 	<link rel="import" href="./ui/tabbed-pane.html">
@@ -21,6 +21,7 @@
 	<link rel="import" href="./views/view-console.html">
 	<link rel="import" href="./views/view-editor.html">
 	<link rel="import" href="./views/view-properties.html">
+	<link rel="import" href="./views/view-creator.html">
 </head>
 <body>
 	<pgcc-workbench>
@@ -46,6 +47,7 @@
 
 		WORKBENCH.openView($("<view-explorer></view-explorer>"), "Projects", "left");
 		WORKBENCH.openView($("<view-properties></view-properties>"), "Properties", "right");
+		WORKBENCH.openView($("<view-creator></view-creator>"), "Create", "left");
 		// WORKBENCH.openView($("<div>Libraries</div>"), "Libraries", "left");
 		// WORKBENCH.openView($("<div>Includes</div>"), "Includes", "left");
 		WORKBENCH.openView($("<view-console></view-console>"), "Console", "bottom");
