--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,11 @@
 	<link rel="import" href="./views/view-creator.html">
 </head>
 <body>
-	<pgcc-workbench>
-	</pgcc-workbench>
+	<pgcc-workbench></pgcc-workbench>
 </body>
 
 <script>
+
 	var gui = require("nw.gui");
 	var WINDOW = require('nw.gui').Window.get();
  	require('process').chdir(process.env.PWD);
